--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,8 +6,13 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+
   </head>
   <body>
     <script src="script.js"></script>
+    <p> Jailbreak! Your cell door is now open, your goal is to escape out of jail.</p>
+    <p>What will you choose?</p>
+    <p><a href= "index.html">sleep</a></p>
+    <p>take your chance and <a href="hallway.html">escape</a></p>
   </body>
 </html>
