sylesheet.css -added a styling div for choice bar index.html -added a background color and div for choice bar hallway.html -added some images and edited the choices div bar

--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-
+    <link href="stylesheet.css" rel="stylesheet" type="text/css" />
+  <style>
+    .background {
+        background-color: #111E2F;
+      }
+      
+  </style>
   </head>
-  <body>
+  <body class="background">
+    <div class="choice">
     <script src="script.js"></script>
-    <p> Jailbreak! Your cell door is now open, your goal is to escape out of jail.</p>
-    <p>What will you choose?</p>
-    <p><a href= "index.html">sleep</a></p>
-    <p>take your chance and <a href="hallway.html">escape</a></p>
+    <div>
+      <p> Jailbreak! Your cell door is now open, your goal is to escape out of jail.</p>
+      <p>What will you choose?</p>
+      <p><a href= "index.html">SLEEP</a> or will you take your chance and <a href="hallway.html">ESCAPE</a></p>
+    </div>
+    </div>
   </body>
 </html>
