-requirements for turning in project -css animation so rope can swing

--- a/followrats.html
+++ b/followrats.html
@@ -5,6 +5,7 @@
     <link href="stylesheet.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-      <a href="followrats.html">Follow the Rats</a>
+      <a href="leaverats.html">Leave Rats</a>
+      <a href="continuerats.html">Continue with Rats</a>
     </body>
 </html>
