--- a/hallway.html
+++ b/hallway.html
@@ -24,7 +24,7 @@
     </head>
   <body>
     <img src="hallway.jpg" alt="hall" class="hall">
-    <img src="rope.png" alt="rope" class="rope" />
+    <img src="rope.png" alt="rope" class="rope" id="swingrope"/>
     
     <div class="box">
 
