--- a/rope.html
+++ b/rope.html
@@ -11,7 +11,7 @@
   <body>
     <div class="choice">
       <br>
-      <p><a href="">Left</a> <a href="">Ladder in the room to the right</a></p>
+      <p><a href="">Left</a> | <a href="">Ladder in the room to the right</a></p>
       <br>
     </div>
   </body>
