left path from hallway (security.html) -css animation for security guard fade

--- a/followrats.html
+++ b/followrats.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="stylesheet.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-      <a href="leaverats.html">Leave Rats</a>
-      <a href="continuerats.html">Continue with Rats</a>
-    </body>
+  <body>
+    <a href="onexit.html">Crawl through the Sewer</a>
+  <a href="desparate.html">Eww I'm Not that Desparate</a>
+  </body>
 </html>
