--- a/rope.html
+++ b/rope.html
@@ -6,12 +6,32 @@
     <title>repl.it</title>
     <link href="stylesheet.css" rel="stylesheet" type="text/css" />
     <style>
+
+      .ropetwo{
+        height: 563px;
+        width: 850px;
+        display: block; 
+        margin: auto; 
+        position: absolute;      
+        left: 2.5%;
+      }
+      .ladder {
+        display: relative; 
+        height: 194px; 
+        width: 46px; 
+        display: block; 
+        margin: auto; 
+        position: relative; 
+      }
+      
     </style>
   </head>
   <body>
-    <div class="choice">
+    <img src="ropeparttwo.jpg" alt="ptwo" class="ropetwo">
+    <img src="ladder.png" alt="ladder" class="ladder" />
+    <div class="box">
       <br>
-      <p><a href="">Left</a> | <a href="">Ladder in the room to the right</a></p>
+      <p><a href="fallthrough.html">Left</a> | <a href="outside.html">Ladder up ahead</a> | <a href="">Stairs on Right</a></p>
       <br>
     </div>
   </body>
