--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
     .background {
         background-color: #111E2F;
       }
-      
+      .opencell {
+        height: 483px;
+        width: 650px;
+        display: block; 
+        margin: auto; 
+        position: relative; 
+      }
   </style>
   </head>
   <body class="background">
+    <img src="opencell.jpg" alt="opencell" class="opencell" />
     <div class="choice">
     <script src="script.js"></script>
     <div>
       <p> Jailbreak! Your cell door is now open, your goal is to escape out of jail.</p>
       <p>What will you choose?</p>
-      <p><a href= "index.html">SLEEP</a> or will you take your chance and <a href="hallway.html">ESCAPE</a></p>
+      <p><a href= "snooze.html">SLEEP</a> or will you take your chance and <a href="hallway.html">ESCAPE</a></p>
     </div>
     </div>
   </body>
