I just want to commit this version of the project.(This version is w/o lornah's template)

--- a/project/outside.html
+++ b/project/outside.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <img src="outside.jpg" alt="outside" class="outside" />
-    <p class="box">Wow! Somehow you ended up outside! Choose a path<a href="bear.html">Left</a> | <a href="deadend.html">Right</a></p>
+    <p class="box">Wow! Somehow you ended up outside! Choose a path (button goes here)Left</a> | (button goes here)Right</a></p>
   </body>
 </html> 
