--- a/project/rope.html
+++ b/project/rope.html
@@ -31,7 +31,7 @@
     <img src="ladder.png" alt="ladder" class="ladder" />
     <div class="box">
       <br>
-      <p><a href="fallthrough.html">Left</a> | <a href="outside.html">Ladder up ahead</a> | <a href="">Stairs on Right</a></p>
+      <p><a href="fallthrough.html">Left</a> | <a href="outside.html">Ladder up ahead</a> | <a href="security.html">Down Stairs on Right</a></p>
       <br>
     </div>
   </body>
