--- a/project/security.html
+++ b/project/security.html
@@ -5,14 +5,12 @@
     <link href="stylesheet.css" rel="stylesheet" type="text/css" />
     <style>
       
-  	.choice{
+  	.select{
 	  border: 2px solid #111E2F;
   	text-align: center; 
-		position: absolute;
-    top:600px;
 		background-color: #787D80; 
 }	
-		.gdoor{
+		.center{
 		display: block;
   		margin-left: auto;
   		margin-right: auto;
@@ -39,14 +37,14 @@
 	display: inline-block;
   margin-left: auto;
   margin-right: auto;
-			  height:385px;
+			  height:335px;
 			  width:75px;
     animation-name: myAnimation;
     animation-duration: 2000ms;
     animation-fill-mode: forwards;
 	position: absolute;
-	top: 120px;
-      left: 344px
+	top: 170px;
+      left: 354px;
 }
 		}
       }
@@ -56,14 +54,15 @@
     </head>
   <body>
 	  <img src="guard.png" alt="guard" class="guard" />
-	  <img src="gdoor.jpg" alt="door" class="gdoor"/>
+	  <img src="gdoor.jpg" alt="door" class="center"/>
   
 	  
-    <div class="choice">
+    <div class="select">
       <p>You spot a knocked-out security guard <br><br>
       <a href="gstraight.html">Take keys and leave</a>
-      <a href="hallway2.html">Ignore and leave</a>
-      <a href="caught1.html">Wake him up</a></p>
+      <a href="gstraight2.html">Ignore and leave</a>
+      <a href="caught1.html">Wake him up</a>
+      <a href="rope.html">Climb up</a></p>
     </div> 
 
   </body>
