--- a/hallway1.html
+++ b/hallway1.html
@@ -10,20 +10,21 @@
   </head>
   <body>
     <div class="game hallway1">
+      <img src="rope.png" alt="rope" class="rope swinging">
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="../index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">Which path will you follow?</h3>
         <div>
           <a class="button2 buttonanimated2 topleft" href="security.html">
-            Go to Security
+            Go Left
           </a>
-          <a class="button2 buttonanimated2 bottomleft" href="followrats.html">
-            Follow Rats
+          <a class="button2 buttonanimated2 bottomleft" href="right.html">
+            Go Right
           </a>
           <a class="button2 buttonanimated2 topright" href=""> Go Straight </a>
-          <a class="button2 buttonanimated2 bottomright" href="ropeclimb.html">
+          <a class="button2 buttonanimated2 bottomright" href="rope.html">
             Go to Rope
           </a>
         </div>
