--- a/closedcell.html
+++ b/closedcell.html
@@ -6,26 +6,18 @@
 	  <link rel="stylesheet" href="gamestyle.css" />
 	  <link rel="preconnect" href="https://fonts.gstatic.com" />
 	  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
-    <style>
-      .closecell {
-        height: 324px; 
-        width: 524px; 
-        display: block; 
-        margin: auto; 
-        position: relative;
-      }
-    </style>
+
   </head>
   <body>
     <div class="game closedcell">
     <img src="rubble.png" alt="rub" class="rubbleend">
 		<div class="menu">
-			<a class="back" href="title.html">&times;</a>
+			<a class="back" href="index.html">&times;</a>
 		</div>
 		<div class="textbox">
-			<h3 class="info"> You fell through back into the jail cell! </h3>
+			<h3 class="info"> You fell through the floor and you're back in the jail cell! </h3>
 			<div>
-				<a class="button2 buttonanimated2" href="index.html">
+				<a class="button2 buttonanimated2 center" href="index.html">
 					Try Again
 				</a>
 			</div>
