--- a/fallthrough.html
+++ b/fallthrough.html
@@ -14,13 +14,13 @@
     <div class="game fallthrough">
       <img src="rubble.png" alt="rub" class="rubble">
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">The floor is unstable in this room! The only option is to... </h3>
+        <h3 class="info">The floor is unstable in this hallway! The only option is to... </h3>
        
         <div>
-          <a class="button2 buttonanimated2" href="closedcell.html">
+          <a class="button2 buttonanimated2 center" href="closedcell.html">
             Go Down
           </a>
         </div>
