--- a/followrats.html
+++ b/followrats.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <div class="game sewer">
-      
+      <img class="raindrop" src="raindrop.png" alt="rain drop">
+      <div class="menu">
+        <a class="back" href="index.html">&times;</a>
+      </div>
       <div class="textbox">
         <h3 class="info">You have interesting options. What will you do?</h3>
         <div>
