--- a/gslocked.html
+++ b/gslocked.html
@@ -11,10 +11,10 @@
   <body>
     <div class="game threedoors">
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">Its locked. Choose another.</h3>
+        <h3 class="info">It's locked. Choose another.</h3>
         <div>
           <a class="button2 buttonanimated2 topleft" href="room1.html">
             Enter room 1
