--- a/gstraight.html
+++ b/gstraight.html
@@ -11,7 +11,7 @@
   <body>
     <div class="game threedoors">
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">You take his keys and come upon 3 doors. Where do you go?</h3>
