--- a/onexit.html
+++ b/onexit.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <div class="game drain">
-      
+      <div class="menu">
+        <a class="back" href="index.html">&times;</a>
+      </div>
       <div class="textbox">
         <h3 class="info">YOU MADE IT OUT... what's that smell tho?</h3>
         <div>
