--- a/right.html
+++ b/right.html
@@ -12,6 +12,9 @@
   <body>
     <div class="game darkjail">
       <img class="rat" src="rat.gif" alt="running rat">
+      <div class="menu">
+        <a class="back" href="index.html">&times;</a>
+      </div>
       <div class="textbox">
         <h3 class="info">You have interesting options. What will you do?</h3>
         <div>
