--- a/riot.html
+++ b/riot.html
@@ -12,12 +12,12 @@
     <div class="game riot">
       <img src="cop.png" alt="police" id=rotate_image class="cop" /> 
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">You got caught in an unsucessful riot.</h3>
         <div>
-         <a class="button2 buttonanimated2 topleft" href="index.html">
+         <a class="button2 buttonanimated2 center" href="index.html">
             Start Over
           </a>
          
