--- a/room1.html
+++ b/room1.html
@@ -12,12 +12,12 @@
     <div class="game rm1">
       <img src="cuff.png" alt="link" id=rotate_image />  
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">Smooth Move! You got caught entering the break room.</h3>
         <div>
-          <a class="button2 buttonanimated2 topleft" href="index.html">
+          <a class="button2 buttonanimated2 center"href="index.html">
             Start Over
           </a>
          
