--- a/room2.html
+++ b/room2.html
@@ -12,7 +12,7 @@
     <div class="game rm2">
               <img src="secure.png" alt="cam" class="scam" />
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">You  unlock the door and enter the surveillance room.</h3>
