--- a/rope.html
+++ b/rope.html
@@ -9,27 +9,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
 </head>
-<!-- <style>
-      .ladder {
-        display: relative; 
-        height: 194px; 
-        width: 46px; 
-        display: block; 
-        margin: auto; 
-        position: relative; 
-      }
-      
-    </style> -->
 
 <body>
 	<div class="game rope1">
 		<div class="menu">
-			<a class="back" href="title.html">&times;</a>
+			<a class="back" href="index.html">&times;</a>
 		</div>
 		<div class="textbox">
 			<h3 class="info">The rope appears to lead to the roof. It doesn't look stable... </h3>
 			<div>
-				<a class="button2 buttonanimated2 topleft" href="fallthrough.html">
+				<a class="button2 climb buttonanimated2 topleft" href="fallthrough.html">
 					Climb Rope
 				</a>
 				<!-- <a class="button2 buttonanimated2 bottomleft" href="outside.html">
