--- a/security.html
+++ b/security.html
@@ -13,7 +13,7 @@
 	<div class="game security">
 		<img src="guard.png" alt="guard" class="guard" />   
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">There's a sleeping guard. What do you do?</h3>
