--- a/start.html
+++ b/start.html
@@ -19,7 +19,7 @@
       <div class="textbox">
         <h3 class="info">Which path will you follow?</h3>
         <div>
-          <a class="button2 buttonanimated2 topleft" href="">
+          <a class="button2 buttonanimated2 topleft" href="index.html">
             Sleep
           </a>
           <a class="button2 buttonanimated2 topright" href="hallway1.html">
