--- a/exit2.html
+++ b/exit2.html
@@ -11,12 +11,12 @@
   <body>
     <div class="game ex2">
       <div class="menu">
-        <a class="back" href="title.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">Congrats! You made it out!</h3>
         <div>
-         <a class="button2 buttonanimated2 topleft" href="index.html">
+         <a class="button2 buttonanimated2 center" href="index.html">
             Play Again!!!
           </a>
          
