--- a/hallway1.html
+++ b/hallway1.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="game hallway1">
-      <img src="rope.png" alt="rope" class="rope swinging">
+      <img src="rope.png" alt="rope" class="rope">
       <div class="menu">
-        <a class="back" href="../index.html">&times;</a>
+        <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">Which path will you follow?</h3>
