--- a/src/closedcell.html
+++ b/src/closedcell.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     	<title>Jailbreak</title>
-	  <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
 	  <link rel="preconnect" href="https://fonts.gstatic.com" />
-	  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="game closedcell">
-    <img src="rubble.png" alt="rub" class="rubbleend">
+      <img src="../images/rubble.png" alt="rub" class="rubbleend" />
 		<div class="menu">
 			<a class="back" href="index.html">&times;</a>
 		</div>
