--- a/src/eg1.html
+++ b/src/eg1.html
@@ -2,14 +2,17 @@
 
 <head>
 	<title>Jailbreak</title>
-	<link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
+      rel="stylesheet"
+    />
 </head>
 
 <body>
 	<div class="game security">
-		<img src="bat.png" alt="baseball" id="rotate_image" /> 
+		<img src="../images/bat.png" alt="baseball" id="rotate_image" /> 
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
