--- a/src/fallthrough.html
+++ b/src/fallthrough.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -9,21 +11,20 @@
     />
   </head>
   <body>
-    <div class="game rm2">
-              <img src="secure.png" alt="cam" class="scam" />
+    <div class="game fallthrough">
+      <img src="../images/rubble.png" alt="rub" class="rubble" />
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">You  unlock the door and enter the surveillance room.</h3>
+        <h3 class="info">The floor is unstable in this hallway! The only option is to... </h3>
+       
         <div>
-          <a class="button2 buttonanimated2 topleft" href="exit2.html">
-            Map a safe path and leave
+          <a class="button2 buttonanimated2 center" href="closedcell.html">
+            Go Down
           </a>
-          <a class="button2 buttonanimated2 topright" href="riot.html">Release all prisoners  </a>
-         
         </div>
       </div>
     </div>
   </body>
-</html>
+</html>  
