--- a/src/followrats.html
+++ b/src/followrats.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -10,22 +11,23 @@
     />
   </head>
   <body>
-    <div class="game darkjail">
-      <img class="rat" src="rat.gif" alt="running rat">
+    <div class="game sewer">
+      <img class="raindrop" src="../images/raindrop.png" alt="rain drop">
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
         <h3 class="info">You have interesting options. What will you do?</h3>
         <div>
-          <a class="button2 buttonanimated2 topleft" href="followrats.html">
-            Follow the Rats
+          <a class="button2 buttonanimated2 topleft" href="onexit.html">
+            Crawl through the Sewer
           </a>
-          <a class="button2 buttonanimated2 topright" href="hallway1.html">
-            No Rats for Me
+          <a class="button2 buttonanimated2 topright" href="desparate.html">
+            Eww I'm Not desparate
           </a>
         </div>
       </div>
     </div>
   </body>
 </html>
+
