--- a/src/rope.html
+++ b/src/rope.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Jailbreak</title>
-	<link rel="stylesheet" href="gamestyle.css" />
+	<link rel="stylesheet" href="../gamestyle.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
 </head>
@@ -21,9 +21,6 @@
 				<a class="button2 climb buttonanimated2 topleft" href="fallthrough.html">
 					Climb Rope
 				</a>
-				<!-- <a class="button2 buttonanimated2 bottomleft" href="outside.html">
-            Ladder
-          </a> -->
 				<a class="button2 buttonanimated2 topright" href="hallway1.html">
 					Go Back
 				</a>
