--- a/src/security.html
+++ b/src/security.html
@@ -4,14 +4,14 @@
 <head>
 
 	<title>Jailbreak</title>
-	<link rel="stylesheet" href="gamestyle.css" />
+	<link rel="stylesheet" href="../gamestyle.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
 </head>
 
 <body>
 	<div class="game security">
-		<img src="guard.png" alt="guard" class="guard" />   
+		<img src="../images/guard.png" alt="guard" class="guard" />   
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
