--- a/src/desparate.html
+++ b/src/desparate.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -10,20 +11,19 @@
     />
   </head>
   <body>
-    <div class="game drain">
+    <div class="game darkjail ">
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">YOU MADE IT OUT... what's that smell tho?</h3>
+        <h3 class="info">You didn't take the chance, so you'll have to roam for a better circumstance...</h3>
         <div>
-          <a class="button2 buttonanimated2 center" href="index.html">
-            Start Over
+          <a class="button2 buttonanimated2 center" href="exit2.html">
+            Roam
           </a>
         </div>
       </div>
     </div>
   </body>
 </html>
-
 
