--- a/src/exit2.html
+++ b/src/exit2.html
@@ -1,9 +1,7 @@
-
-<!DOCTYPE html>
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -11,19 +9,19 @@
     />
   </head>
   <body>
-    <div class="game darkjail ">
+    <div class="game ex2">
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">You didn't take the chance, so you'll have to roam for a better circumstance...</h3>
+        <h3 class="info">Congrats! You made it out!</h3>
         <div>
-          <a class="button2 buttonanimated2 center" href="exit2.html">
-            Roam
+         <a class="button2 buttonanimated2 center" href="index.html">
+            Play Again!!!
           </a>
+         
         </div>
       </div>
     </div>
   </body>
 </html>
-
