--- a/src/gstraight.html
+++ b/src/gstraight.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -14,12 +14,12 @@
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">You come upon 3 doors. Where do you go?</h3>
+        <h3 class="info">You take his keys and come upon 3 doors. Where do you go?</h3>
         <div>
           <a class="button2 buttonanimated2 topleft" href="room1.html">
             Enter room 1
           </a>
-          <a class="button2 buttonanimated2 bottomleft" href="gslocked.html">
+          <a class="button2 buttonanimated2 bottomleft" href="room2.html">
             Enter room 2
           </a>
           <a class="button2 buttonanimated2 topright" href="hallway1.html"> Enter room 3 </a>
