--- a/src/onexit.html
+++ b/src/onexit.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -9,20 +10,20 @@
     />
   </head>
   <body>
-    <div class="game riot">
-      <img src="cop.png" alt="police" id=rotate_image class="cop" /> 
+    <div class="game drain">
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">You got caught in an unsucessful riot.</h3>
+        <h3 class="info">YOU MADE IT OUT... what's that smell tho?</h3>
         <div>
-         <a class="button2 buttonanimated2 center" href="index.html">
+          <a class="button2 buttonanimated2 center" href="index.html">
             Start Over
           </a>
-         
         </div>
       </div>
     </div>
   </body>
 </html>
+
+
