--- a/src/right.html
+++ b/src/right.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -9,17 +10,20 @@
     />
   </head>
   <body>
-    <div class="game ex2">
+    <div class="game darkjail">
+      <img class="rat" src="../images/rat.gif" alt="running rat">
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">Congrats! You made it out!</h3>
+        <h3 class="info">You have interesting options. What will you do?</h3>
         <div>
-         <a class="button2 buttonanimated2 center" href="index.html">
-            Play Again!!!
+          <a class="button2 buttonanimated2 topleft" href="followrats.html">
+            Follow the Rats
           </a>
-         
+          <a class="button2 buttonanimated2 topright" href="hallway1.html">
+            No Rats for Me!
+          </a>
         </div>
       </div>
     </div>
