--- a/src/riot.html
+++ b/src/riot.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -9,15 +9,15 @@
     />
   </head>
   <body>
-    <div class="game rm1">
-      <img src="cuff.png" alt="link" id=rotate_image />  
+    <div class="game riot">
+      <img src="../images/cop.png" alt="police" id=rotate_image class="cop" /> 
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">Smooth Move! You got caught entering the break room.</h3>
+        <h3 class="info">You got caught in an unsucessful riot.</h3>
         <div>
-          <a class="button2 buttonanimated2 center"href="index.html">
+         <a class="button2 buttonanimated2 center" href="index.html">
             Start Over
           </a>
          
