--- a/src/room1.html
+++ b/src/room1.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
@@ -11,20 +9,20 @@
     />
   </head>
   <body>
-    <div class="game fallthrough">
-      <img src="rubble.png" alt="rub" class="rubble">
+    <div class="game rm1">
+      <img src="../images/cuff.png" alt="link" id=rotate_image />  
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">The floor is unstable in this hallway! The only option is to... </h3>
-       
+        <h3 class="info">Smooth Move! You got caught entering the break room.</h3>
         <div>
-          <a class="button2 buttonanimated2 center" href="closedcell.html">
-            Go Down
+          <a class="button2 buttonanimated2 center"href="index.html">
+            Start Over
           </a>
+         
         </div>
       </div>
     </div>
   </body>
-</html>  
+</html>
