--- a/src/start.html
+++ b/src/start.html
@@ -1,33 +1,32 @@
-
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="gamestyle.css" />
+    <link rel="stylesheet" href="../gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div class="game sewer">
-      <img class="raindrop" src="raindrop.png" alt="rain drop">
+  <body class="background">
+    <div class="game start">
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">You have interesting options. What will you do?</h3>
+        <h3 class="info">Which path will you follow?</h3>
         <div>
-          <a class="button2 buttonanimated2 topleft" href="onexit.html">
-            Crawl through the Sewer
+          <a class="button2 buttonanimated2 topleft" href="index.html">
+            Sleep
           </a>
-          <a class="button2 buttonanimated2 topright" href="desparate.html">
-            Eww I'm Not desparate
+          <a class="button2 buttonanimated2 topright" href="hallway1.html">
+            Escape
           </a>
         </div>
       </div>
     </div>
   </body>
 </html>
-
