--- a/src/followrats.html
+++ b/src/followrats.html
@@ -23,7 +23,7 @@
             Crawl through the Sewer
           </a>
           <a class="button2 buttonanimated2 topright" href="desparate.html">
-            Eww I'm Not desparate
+            Eww I'm Not desparate!
           </a>
         </div>
       </div>
