added summary html and css

--- a/src/start.html
+++ b/src/start.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="../gamestyle.css" />
+    <link rel="stylesheet" href="../css/gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
