--- a/src/riot.html
+++ b/src/riot.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Jailbreak</title>
-    <link rel="stylesheet" href="../gamestyle.css" />
+    <link rel="stylesheet" href="../css/gamestyle.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
