css for the summary

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
 			<div class="popup">
 				<h2>How To Play</h2>
 				<a class="close" href="#">&times;</a>
-				<div class="content">Explain rules of the game here!</div>
+				<div class="content">
+					Summary of JAILBREAK:
+					<a id="link" href="summary.html"> Click Here! </a>
+				</div>
 			</div>
 		</div>
 	</div>
