--- a/src/summary.html
+++ b/src/summary.html
@@ -20,6 +20,7 @@
         <div id="desc">
           Description: Jailbreak is a click-based Adventure game created with
           HTML, CSS with no JAVASCRIPT.
+          <a id="link" href="index.html"> JAILBREAK GAME</a>
         </div>
         <h3 class="header">Team Members:</h3>
       </div>
