fixed css for textbox

--- a/src/summary.html
+++ b/src/summary.html
@@ -29,22 +29,17 @@
           <div class="col">
             <span class="name">Okoth, Lornah </span>
             <ul>
-              <li>List responsibilities</li>
-              <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </li>
+              <li>Created a template for the the textbox</li>
+              <li>Built the summary page</li>
+              <li>Created the UML </li>
+              <li>Created the Title screen.</li>
+              <li>Set up the skeleton of the game</li>
             </ul>
           </div>
           <div class="col">
             <span class="name">Phan, Lucky </span>
             <ul>
-              <li>List responsibilities</li>
+              <li>List responsibilities</li> 
               <li>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -59,18 +54,15 @@
         </div>
         <div class="row">
           <div class="col">
-            <span class="name">Martinez, Priscilla </span>
+            <span class="name ">Martinez, Priscilla </span>
             <ul>
               <li>List responsibilities</li>
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </li>
+                <ul>
+                  <li>Coder/Programmer</li>
+                  <li>Rope portion of game</li>
+                  <li>CSS animations, transitions, translations</li>
+                  <li></li>
             </ul>
           </div>
           <div class="col">
@@ -78,14 +70,12 @@
             <ul>
               <li>List responsibilities</li>
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Programmer
               </li>
+              <li> Developed Right html</li>
+              <li>Developed Followrats html</li>
+              <li>Developed Desperate html</li>
+              <li>Developed Onexit html</li>
             </ul>
           </div>
         </div>
