--- a/src/summary.html
+++ b/src/summary.html
@@ -31,7 +31,7 @@
             <ul>
               <li>Created a template for the the textbox</li>
               <li>Built the summary page</li>
-              <li>Created the UML </li>
+              <li>Created the UML</li>
               <li>Created the Title screen.</li>
               <li>Set up the skeleton of the game</li>
             </ul>
@@ -39,7 +39,7 @@
           <div class="col">
             <span class="name">Phan, Lucky </span>
             <ul>
-              <li>List responsibilities</li> 
+              <li>List responsibilities</li>
               <li>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -54,25 +54,21 @@
         </div>
         <div class="row">
           <div class="col">
-            <span class="name ">Martinez, Priscilla </span>
+            <span class="name">Martinez, Priscilla </span>
             <ul>
               <li>List responsibilities</li>
-              <li>
-                <ul>
-                  <li>Coder/Programmer</li>
-                  <li>Rope portion of game</li>
-                  <li>CSS animations, transitions, translations</li>
-                  <li></li>
+
+              <li>Coder/Programmer</li>
+              <li>Rope portion of game</li>
+              <li>CSS animations, transitions, translations</li>
             </ul>
           </div>
           <div class="col">
             <span class="name">Shack, Alaya </span>
             <ul>
               <li>List responsibilities</li>
-              <li>
-                Programmer
-              </li>
-              <li> Developed Right html</li>
+              <li>Programmer</li>
+              <li>Developed Right html</li>
               <li>Developed Followrats html</li>
               <li>Developed Desperate html</li>
               <li>Developed Onexit html</li>
