added meta, DOCTYPE
Passed HTML & CSS validator

--- a/project1_jailbreak/src/index.html
+++ b/project1_jailbreak/src/index.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-	<title>Jailbreak</title>
-	<link rel="stylesheet" href="../css/gamestyle.css" />
-</head>
-
-<body>
-	<div class="game home">
-		<div class="title jail">JAIL</div>
-		<div class="title break">BREAK</div>
-		<a class="button play buttonanimated" href="start.html"> Play </a>
-		<a class="button rules buttonanimated" href="#popup1"> Rules </a>
-		<div id="popup1" class="overlay">
-			<div class="popup">
-				<h2>How To Play</h2>
-				<a class="close" href="#">&times;</a>
-				<div class="content">
-					Summary of JAILBREAK:
-					<a id="link" href="summary.html"> Click Here! </a>
-				</div>
-			</div>
-		</div>
-	</div>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jailbreak</title>
+    <link rel="stylesheet" href="../css/gamestyle.css" />
+  </head>
+  <body>
+    <div class="game home">
+      <div class="title jail">JAIL</div>
+      <div class="title break">BREAK</div>
+      <a class="button play buttonanimated" href="start.html"> Play </a>
+      <a class="button rules buttonanimated" href="#popup1"> Rules </a>
+      <div id="popup1" class="overlay">
+        <div class="popup">
+          <h2>How To Play</h2>
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+            Summary of JAILBREAK:
+            <a id="link" href="summary.html"> Click Here! </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="valid">
+      <p>
+        <a href="../images/vcss-blue.gif">
+          <img
+            style="border: 0; width: 88px; height: 31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!"
+          />
+        </a>
+      </p>
+      <p>
+        <a href="../images/valid-html401-blue.png">
+          <img
+            style="border: 0; width: 88px; height: 31px"
+            src="../images/valid-html401-blue.png"
+            alt="Valid HTML!"
+          />
+        </a>
+      </p>
+    </div>    
+  </body>
 </html>
