--- a/project1_jailbreak/src/room2.html
+++ b/project1_jailbreak/src/room2.html
@@ -1,12 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jailbreak</title>
     <link rel="stylesheet" href="../css/gamestyle.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div class="game rm2">
