--- a/project1_jailbreak/src/security.html
+++ b/project1_jailbreak/src/security.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-
-	<title>Jailbreak</title>
-	<link rel="stylesheet" href="../css/gamestyle.css" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
-</head>
-
-<body>
-	<div class="game security">
-		<img src="../images/guard.png" alt="guard" class="guard" />   
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jailbreak</title>
+    <link rel="stylesheet" href="../css/gamestyle.css" />
+  </head>
+  <body>
+    <div class="game security">
+      <img src="../images/guard.png" alt="guard" class="guard" />
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
@@ -24,7 +21,9 @@
           <a class="button2 buttonanimated2 bottomleft" href="gstraight2.html">
             Ignore him and leave
           </a>
-          <a class="button2 buttonanimated2 topright" href="eg1.html"> Wake him up </a>
+          <a class="button2 buttonanimated2 topright" href="eg1.html">
+            Wake him up
+          </a>
         </div>
       </div>
     </div>
