--- a/project1_jailbreak/src/desparate.html
+++ b/project1_jailbreak/src/desparate.html
@@ -1,29 +1,25 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jailbreak</title>
     <link rel="stylesheet" href="../css/gamestyle.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
-    <div class="game darkjail ">
+    <div class="game darkjail">
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">You didn't take the chance, so you'll have to roam for a better circumstance...</h3>
+        <h3 class="info">
+          You didn't take the chance, so you'll have to roam for a better
+          circumstance...
+        </h3>
         <div>
-          <a class="button2 buttonanimated2 center" href="exit2.html">
-            Roam
-          </a>
+          <a class="button2 buttonanimated2 center" href="exit2.html"> Roam </a>
         </div>
       </div>
     </div>
   </body>
 </html>
-
