--- a/project1_jailbreak/src/eg1.html
+++ b/project1_jailbreak/src/eg1.html
@@ -1,28 +1,23 @@
-<html>
-
-<head>
-	<title>Jailbreak</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jailbreak</title>
     <link rel="stylesheet" href="../css/gamestyle.css" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
-      rel="stylesheet"
-    />
-</head>
-
-<body>
-	<div class="game security">
-		<img src="../images/bat.png" alt="baseball" id="rotate_image" /> 
+  </head>
+  <body>
+    <div class="game security">
+      <img src="../images/bat.png" alt="baseball" id="rotate_image" />
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">Smart move! You get beaten up. </h3>
+        <h3 class="info">Smart move! You get beaten up.</h3>
         <div>
-         <a class="button2 buttonanimated2 center" href="index.html">
-            Try Again 
+          <a class="button2 buttonanimated2 center" href="index.html">
+            Try Again
           </a>
-         
         </div>
       </div>
     </div>
