--- a/project1_jailbreak/src/followrats.html
+++ b/project1_jailbreak/src/followrats.html
@@ -1,18 +1,14 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jailbreak</title>
     <link rel="stylesheet" href="../css/gamestyle.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div class="game sewer">
-      <img class="raindrop" src="../images/raindrop.png" alt="rain drop">
+      <img class="raindrop" src="../images/raindrop.png" alt="rain drop" />
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
@@ -30,4 +26,3 @@
     </div>
   </body>
 </html>
-
