--- a/project1_jailbreak/src/gstraight.html
+++ b/project1_jailbreak/src/gstraight.html
@@ -1,12 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jailbreak</title>
     <link rel="stylesheet" href="../css/gamestyle.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div class="game threedoors">
@@ -14,7 +12,9 @@
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">You take his keys and come upon 3 doors. Where do you go?</h3>
+        <h3 class="info">
+          You take his keys and come upon 3 doors. Where do you go?
+        </h3>
         <div>
           <a class="button2 buttonanimated2 topleft" href="room1.html">
             Enter room 1
@@ -22,7 +22,9 @@
           <a class="button2 buttonanimated2 bottomleft" href="room2.html">
             Enter room 2
           </a>
-          <a class="button2 buttonanimated2 topright" href="hallway1.html"> Enter room 3 </a>
+          <a class="button2 buttonanimated2 topright" href="hallway1.html">
+            Enter room 3
+          </a>
           <a class="button2 buttonanimated2 bottomright" href="security.html">
             Go back
           </a>
