--- a/project1_jailbreak/src/right.html
+++ b/project1_jailbreak/src/right.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jailbreak</title>
     <link rel="stylesheet" href="../css/gamestyle.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div class="game darkjail">
-      <img class="rat" src="../images/rat.gif" alt="running rat">
+      <img class="rat" src="../images/rat.gif" alt="running rat" />
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
