--- a/project1_jailbreak/src/room1.html
+++ b/project1_jailbreak/src/room1.html
@@ -1,26 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jailbreak</title>
     <link rel="stylesheet" href="../css/gamestyle.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div class="game rm1">
-      <img src="../images/cuff.png" alt="link" id=rotate_image />  
+      <img src="../images/cuff.png" alt="link" id="rotate_image" />
       <div class="menu">
         <a class="back" href="index.html">&times;</a>
       </div>
       <div class="textbox">
-        <h3 class="info">Smooth Move! You got caught entering the break room.</h3>
+        <h3 class="info">
+          Smooth Move! You got caught entering the break room.
+        </h3>
         <div>
-          <a class="button2 buttonanimated2 center"href="index.html">
+          <a class="button2 buttonanimated2 center" href="index.html">
             Start Over
           </a>
-         
         </div>
       </div>
     </div>
