--- a/project1_jailbreak/src/rope.html
+++ b/project1_jailbreak/src/rope.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Jailbreak</title>
-	<link rel="stylesheet" href="../css/gamestyle.css" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap" rel="stylesheet" />
-</head>
-
-<body>
-	<div class="game rope1">
-		<div class="menu">
-			<a class="back" href="index.html">&times;</a>
-		</div>
-		<div class="textbox">
-			<h3 class="info">The rope appears to lead to the roof. It doesn't look stable... </h3>
-			<div>
-				<a class="button2 climb buttonanimated2 topleft" href="fallthrough.html">
-					Climb Rope
-				</a>
-				<a class="button2 buttonanimated2 topright" href="hallway1.html">
-					Go Back
-				</a>
-			</div>
-		</div>
-	</div>
-
-
-
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jailbreak</title>
+    <link rel="stylesheet" href="../css/gamestyle.css" />
+  </head>
+  <body>
+    <div class="game rope1">
+      <div class="menu">
+        <a class="back" href="index.html">&times;</a>
+      </div>
+      <div class="textbox">
+        <h3 class="info">
+          The rope appears to lead to the roof. It doesn't look stable...
+        </h3>
+        <div>
+          <a
+            class="button2 climb buttonanimated2 topleft"
+            href="fallthrough.html"
+          >
+            Climb Rope
+          </a>
+          <a class="button2 buttonanimated2 topright" href="hallway1.html">
+            Go Back
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
