--- a/project1_jailbreak/src/summary.html
+++ b/project1_jailbreak/src/summary.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JAILBREAK Summary</title>
     <link rel="stylesheet" href="../css/sumstyle.css" />
   </head>
@@ -31,7 +34,7 @@
             <ul>
               <li>List responsibilities</li>
               <li>Programmer</li>
-              <li>Constructed left portion of the game </li>
+              <li>Constructed left portion of the game</li>
               <li>CSS animations, transitions, and translations</li>
             </ul>
           </div>
@@ -59,6 +62,26 @@
           </div>
         </div>
       </div>
+    </div>
+    <div id="valid">
+      <p>
+        <a href="../images/vcss-blue.gif">
+          <img
+            style="border: 0; width: 88px; height: 31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!"
+          />
+        </a>
+      </p>
+      <p>
+        <a href="../images/valid-html401-blue.png">
+          <img
+            style="border: 0; width: 88px; height: 31px"
+            src="../images/valid-html401-blue.png"
+            alt="Valid HTML!"
+          />
+        </a>
+      </p>
     </div>
   </body>
 </html>
