--- a/project1_jailbreak/src/index.html
+++ b/project1_jailbreak/src/index.html
@@ -28,7 +28,7 @@
         <a href="../images/vcss-blue.gif">
           <img
             style="border: 0; width: 88px; height: 31px"
-            src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+            src="../images/vcss-blue.gif"
             alt="Valid CSS!"
           />
         </a>
