--- a/project1_jailbreak/src/summary.html
+++ b/project1_jailbreak/src/summary.html
@@ -13,6 +13,8 @@
         <div id="desc">
           Description: Jailbreak is a click-based Adventure game created with
           HTML, CSS with no JAVASCRIPT.
+        </div>
+        <div id="desc">
           <a id="link" href="index.html"> JAILBREAK GAME</a>
         </div>
         <h3 class="header">Team Members:</h3>
@@ -22,20 +24,27 @@
           <div class="col">
             <span class="name">Okoth, Lornah </span>
             <ul>
-              <li>Created a template for the the textbox</li>
+              <li>Created a template for the the textbox and buttons</li>
               <li>Built the summary page</li>
               <li>Created the UML</li>
-              <li>Created the Title screen.</li>
-              <li>Set up the skeleton of the game</li>
+              <li>Created the Title screen</li>
+              <li>Debug Tester</li>
+              <li>Programmer</li>
+              <li>Demonstration of the website</li>
+              <li>
+                CSS animations, transitions, and translations for the title
+                screen path
+              </li>
             </ul>
           </div>
           <div class="col">
             <span class="name">Phan, Lucky </span>
             <ul>
-              <li>List responsibilities</li>
               <li>Programmer</li>
-              <li>Constructed left portion of the game</li>
+              <li>Constructed "Left" path portion of the game</li>
               <li>CSS animations, transitions, and translations</li>
+              <li>Created UML</li>
+              <li>Created the idea concept of the game</li>
             </ul>
           </div>
         </div>
@@ -43,21 +52,27 @@
           <div class="col">
             <span class="name">Martinez, Priscilla </span>
             <ul>
-              <li>List responsibilities</li>
-              <li>Coder/Programmer</li>
-              <li>Rope portion of game</li>
-              <li>CSS animations, transitions, translations</li>
+              <li>Programmer</li>
+              <li>Constructed "Rope" path portion of the game</li>
+              <li>
+                CSS animations, transitions, and translations for "Rope" path
+              </li>
+              <li>Created UML</li>
+              <li>Created the Project PowerPoint</li>
+              <li>Set up the skeleton of the game</li>
             </ul>
           </div>
           <div class="col">
             <span class="name">Shack, Alaya </span>
             <ul>
-              <li>List responsibilities</li>
               <li>Programmer</li>
-              <li>Developed Right html</li>
-              <li>Developed Followrats html</li>
-              <li>Developed Desperate html</li>
-              <li>Developed Onexit html</li>
+              <li>Constructed "Right" path portion of the game</li>
+              <li>Created UML</li>
+              <li>Presentation of the Project</li>
+              <li>
+                CSS animations, transitions, and translations for the "Right"
+                path
+              </li>
             </ul>
           </div>
         </div>
