--- a/project1_jailbreak/src/summary.html
+++ b/project1_jailbreak/src/summary.html
@@ -22,7 +22,7 @@
       <div class="textbox">
         <div class="row">
           <div class="col">
-            <span class="name">Okoth, Lornah </span>
+            <span class="name">Okoth, Lornah (Project Leader) </span>
             <ul>
               <li>Created a template for the the textbox and buttons</li>
               <li>Built the summary page</li>
